--- a/apiserve/composer.json
+++ b/apiserve/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "barryvdh/laravel-ide-helper": "^2.4",
         "doctrine/dbal": "^2.5",
+        "elasticsearch/elasticsearch": "^5.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "league/oauth2-client": "~1.0",
