--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve  --host=w.tera.jp --proxy-config proxy.conf.json --port=80",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
